Fix for new actions button on mobile

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -388,6 +388,10 @@
 					text-shadow: 0.05rem 0.05rem 0.05rem $gray-800;
 					margin: 0;
 				}
+
+				.map-title .actions {
+					text-align: right;
+				}
 			}
 		}
 
